// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxDrawerTitle customize 1`] = `
<div>
  <h3
    class="drawer-title bazinga"
  >
    Test
  </h3>
</div>
`;

exports[`loads and displays CxDrawerTitle component 1`] = `
<div>
  <h2
    class="drawer-title"
  >
    Test
  </h2>
</div>
`;
